@@ -48,7 +48,7 @@ class WC_Subscriptions_Upgrader {
 
 		self::$about_page_url = admin_url( 'admin.php?page=wc-admin' );
 
-		$version_out_of_date = version_compare( self::$active_version,  WC_Subscriptions_Core_Plugin::instance()->get_plugin_version(), '<' );
+		$version_out_of_date = version_compare( self::$active_version, WC_Subscriptions_Core_Plugin::instance()->get_library_version(), '<' );
 
 		// Set the cron lock on every request with an out of date version, regardless of authentication level, as we can only lock cron for up to 10 minutes at a time, but we need to keep it locked until the upgrade is complete, regardless of who is browing the site
 		if ( $version_out_of_date ) {
@@ -155,7 +155,7 @@ class WC_Subscriptions_Upgrader {
 		/**
 		 * before upgrade hook.
 		 */
-		do_action( 'woocommerce_subscriptions_before_upgrade',  WC_Subscriptions_Core_Plugin::instance()->get_plugin_version(), self::$active_version );
+		do_action( 'woocommerce_subscriptions_before_upgrade', WC_Subscriptions_Core_Plugin::instance()->get_library_version(), self::$active_version );
 
 		// Update the hold stock notification to be one week (if it's still at the default 60 minutes) to prevent cancelling subscriptions using manual renewals and payment methods that can take more than 1 hour (i.e. PayPal eCheck)
 		if ( '0' == self::$active_version || version_compare( self::$active_version, '1.4', '<' ) ) {
@@ -273,13 +273,13 @@ class WC_Subscriptions_Upgrader {
 	 */
 	public static function upgrade_complete() {
 
-		update_option( WC_Subscriptions_Admin::$option_prefix . '_active_version',  WC_Subscriptions_Core_Plugin::instance()->get_plugin_version() );
+		update_option( WC_Subscriptions_Admin::$option_prefix . '_active_version', WC_Subscriptions_Core_Plugin::instance()->get_library_version() );
 
 		delete_transient( 'doing_cron' );
 
 		delete_option( 'wc_subscriptions_is_upgrading' );
 
-		do_action( 'woocommerce_subscriptions_upgraded',  WC_Subscriptions_Core_Plugin::instance()->get_plugin_version(), self::$active_version );
+		do_action( 'woocommerce_subscriptions_upgraded', WC_Subscriptions_Core_Plugin::instance()->get_library_version(), self::$active_version );
 	}
 
 	/**
@@ -947,7 +947,7 @@ class WC_Subscriptions_Upgrader {
 		wcs_deprecated_function( __METHOD__, '1.2.0' );
 
 		// If there's no downgrade, exit early. self::$active_version is a bit of a misnomer here but in an upgrade context it refers to the database version of the plugin.
-		if ( ! version_compare( wcs_get_minor_version_string( self::$active_version ), wcs_get_minor_version_string( WC_Subscriptions_Core_Plugin::instance()->get_plugin_version() ), '>' ) ) {
+		if ( ! version_compare( wcs_get_minor_version_string( self::$active_version ), wcs_get_minor_version_string( WC_Subscriptions_Core_Plugin::instance()->get_library_version() ), '>' ) ) {
 			return;
 		}
 
@@ -959,7 +959,7 @@ class WC_Subscriptions_Upgrader {
 				'<strong>',
 				'</strong>',
 				'<code>' . self::$active_version . '</code>',
-				'<code>' . WC_Subscriptions_Core_Plugin::instance()->get_plugin_version() . '</code>',
+				'<code>' . WC_Subscriptions_Core_Plugin::instance()->get_library_version() . '</code>',
 				'<a href="https://woocommerce.com/my-account/marketplace-ticket-form/" target="_blank">',
 				'</a>',
 				'<a href="https://docs.woocommerce.com/document/subscriptions/upgrade-instructions/#section-12" target="_blank">',
